<resources>
    <string name="app_name">Social Campus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Social Campus</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Instillinger</string>
    <string name="menu_home">Hjem</string>
    <string name="menu_about_us">Om Oss</string>
    <string name="menu_groups">Grupper</string>
    <string name="menu_all_groups">Alle grupper</string>
    <string name="menu_log_in">Logg Inn</string>
    <string name="menu_sign_up">Registrer deg</string>
    <string name="menu_user">Profil</string>
    <string name="menu_new_post">Ny post</string>

    <!-- Headlines -->
    <string name="all_groups_all">Alle grupper</string>
    <string name="all_groups_sport">Sport</string>
    <string name="all_groups_uteliv">Uteliv</string>

    <!-- Log in and sign up -->
    <string name="socialcampus">Social Campus</string>
    <string name="socialcampuslogo">Socialcampuslogo</string>
    <string name="forgot_psw">Glemt passord?</string>
    <string name="password">Passord</string>
    <string name="no_user">Har du ikke en konto?</string>
    <string name="username">Brukernavn</string>
    <string name="log_in">Logg inn</string>
    <string name="email">E-post</string>
    <string name="sign_up">Registrer deg</string>
    <string name="new_acc">Lag ny konto</string>


    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="logout">Logout</string>

    <!-- Splash screen -->
    <string name="title_activity_splash">SplashActivity/</string>
    <string name="welcome">Welcome to SocialCampus</string>

    <string name="placeholder_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt</string>
    <string name="placeholder_title">Duis aute irure dolor</string>
    <string name="placeholder_comment_count">12 Kommentarer</string>
    <string name="placeholder_like_count">24 Liker</string>
    <string name="placeholder_timestamp">12:31:53</string>
    <string name="placeholder_group_name">Gruppenavn</string>

</resources>
