<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.socialcampus.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.socialcampus.ui.about_us.GalleryFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.socialcampus.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.socialcampus.ui.tools.ToolsFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_tools" />
</navigation>