<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF">

    <ImageView
        android:id="@+id/sclogo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/socialcampuslogo"
        android:src="@mipmap/ic_logo"
        app:srcCompat="@mipmap/ic_logo" />

    <TextView
        android:id="@+id/socialcampus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sclogo"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/socialcampus"
        android:textColor="#185A72"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/socialcampus"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/usernameL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:textColorHint="#FFFFFF"
            android:textSize="13sp"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="#a9b0c3"
            android:layout_below="@+id/main"

            ></LinearLayout>

        <EditText
            android:id="@+id/passordL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#00000000"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:textColorHint="#FFFFFF"
            android:textSize="13sp"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="#a9b0c3"></LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/create"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_user"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_psw"
            android:textColor="#FFFFFF"

            android:textSize="13sp" />
    </LinearLayout>


</RelativeLayout>
