<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">

    <ImageView
        android:id="@+id/sclogo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/socialcampuslogo"
        android:src="@mipmap/ic_logo"
        app:srcCompat="@mipmap/ic_logo" />

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sclogo"
        android:layout_marginTop="32dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/textWhitePrimary" />

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginUsername"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="24dp"
            android:text="@string/log_in"
            android:textColor="@color/textWhitePrimary" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btnLoginRegister"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/no_user"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:textColor="@color/textWhiteSecondary"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <Button
                android:id="@+id/forgotpassword"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/forgot_psw"
                android:textColor="@color/textWhiteSecondary"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>